--- a/pom.xml
+++ b/pom.xml
@@ -226,6 +226,12 @@
       <version>1.3</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.github.spotbugs</groupId>
+      <artifactId>spotbugs-annotations</artifactId>
+      <version>4.7.2</version>
+      <type>jar</type>
+    </dependency>
   </dependencies>
 
   <distributionManagement>
